2005-02-24  Atsushi Enomoto  <atsushi@ximian.com>

	* XslAttribute.cs : reduced reference to stylesheet XPathNavigator by
	  keeping nsDecls.

2005-02-23  Atsushi Enomoto  <atsushi@ximian.com>

	* XslNumber.cs : Fixed incorrect 0 padding for 1) unsupported (and thus
	  default '1') pattern and 2) suffixed pattern with non-number char(s).

2005-02-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XslCopy.cs, XslCopyOf.cs : copy namespace nodes in the 
	  transformation input == not limited to "local" namespace nodes.

2005-02-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XslNumber.cs : maybe I had better explain why I needed own Round().

2005-02-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XslNumber.cs : We must round double value before formatting it as
	  alphabets or roman numbers.

2005-02-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XslAttribute.cs : It does not have to probe prefix at run time.

2005-02-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XslLiteralElement.cs,
	  XslCopy.cs : Now that exclude-element-prefixes and extension-
	  element-prefixes are handled in GetNamespacesToCopy(), we could
	  just remove those collector routine. Also, literal elements were
	  still trying to output namespaces outside TryElementNamespacesOutput.

2005-02-16  Atsushi Enomoto  <atsushi@ximian.com>

	* XslCopy.cs : According to the spec 7.5, namespace nodes should be
	  copied. Patch by Andrew Skiba.
	* XslLiteralElement.cs,
	  XslElement.cs : Change in sync with TryElementNamespacesOutput().
	* XslStylesheet.cs : version check was incorrectly done.
	  Should check empty string, not null.

2005-02-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XslMessage.cs, XslOperation.cs, XslAttribute.cs, XslComment.cs,
	  XslProcessingInstruction.cs : simplified code by using
	  XslOperation.EvaluateAsString(). It will also help optimization.

2005-02-14  Atsushi Enomoto  <atsushi@ximian.com>

	* XslApplyTemplates.cs : significant whitespace should not be regarded